Add consul registration

--- a/etc/application.json
+++ b/etc/application.json
@@ -1,1 +1,1 @@
-{"port": 4000, "consul_address": "http://consul3:8500"}
+{"port": 4000, "address": "hipster_cache3", "consul_address": "bob.net:8500"}
