--- a/etc/application.json
+++ b/etc/application.json
@@ -1,1 +1,1 @@
-{"metrics_port": 4002,"tcp_port": 4001, "address": "hipster-cache-proxy2", "consul_address": "consul5:8500"}
+{"metrics_port": 4002,"server_port": 4001,"client_port": 4004, "address": "hipster-cache-proxy4", "consul_address": "consul5:8500"}
