--- a/etc/application.json
+++ b/etc/application.json
@@ -1,1 +1,1 @@
-{"metrics_port": 4002,"server_port": 4001,"client_port": 4004, "address": "hipster-cache-proxy4", "consul_address": "consul5:8500"}
+{"metrics_port": 4002,"server_port": 4001,"client_port": 4004, "address": "hipster-cache-proxy4", "consul_address": "consul5:8500", "max_key_lenght": 255, "count_virt_nodes": 100}
